# spotify-games

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  package.json  pnpm-lock.yaml
backend/: .gitignore  .prettierrc  Cargo.toml  Dockerfile  README.md  package.json  pnpm-lock.yaml  tailwind.config.mjs
backend/scripts/: setup_js.sh
backend/src/: lib.rs  main.rs  middleware.rs  routes.rs  spotify.rs  store.rs  ws.rs
backend/src/middleware/: token_check.rs  token_updater.rs
backend/src/routes/: callback.rs  currently_playing.rs  games.rs  index.rs  pause.rs  queue.rs  search.rs  skip.rs
backend/src/routes/games/: six_minutes.rs
backend/src/spotify/: api.rs  event_loop.rs  game.rs  response_types.rs  token.rs  types.rs
backend/src/spotify/game/: opus.rs  palmerna.rs  rattling_bog.rs  six_minutes.rs
backend/src/templates/: index.html
backend/templates/: base.html  index.html  search.html
backend/templates/comp/: added_song.html  game_modal.html  game_started.html  songbutton.html  songbuttons.html  toggle.html
client/: .prettierrc  Dockerfile  package-lock.json  package.json  svelte.config.js  tailwind.config.js
client/src/: app.css  app.scss
client/src/lib/: gamemodes.ts  types.ts
client/src/lib/components/: banner.svelte  queuePopup.svelte  search.svelte  searchBox.svelte  searchResults.svelte  songBox.svelte
client/src/routes/: +layout.svelte  +page.server.ts  +page.svelte
client/src/routes/callback/: +server.ts
client/src/routes/currently/: +server.ts
client/src/routes/game/SixMinutes/: +page.server.ts  +page.svelte
client/src/routes/game/[slug]/: +page.server.ts  +page.svelte
client/src/routes/search/[slug]/: +page.server.ts  +page.svelte
src/: lib.rs  main.rs  middleware.rs  routes.rs  store.rs  ws.rs
src/middleware/: token_check.rs  token_updater.rs
src/routes/: callback.rs  clear.rs  currently_playing.rs  games.rs  index.rs  pause.rs  queue.rs  search.rs  skip.rs
src/spotify/: api.rs  game.rs  response_types.rs  token.rs
src/spotify/game/: single_song.rs  six_minutes.rs
templates/: base.html  index.html  search.html
templates/comp/: added_song.html  game_modal.html  queue.html  songbuttons.html  toggle.html
