[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 3 
strip = true
codegen-units = 1 
lto = true

[[bin]]
name = "backend"
path = "src/main.rs"

[dependencies]
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
axum = { version = "0.7.5", features = ["http2", "ws", "multipart", "macros", "form"] }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
base64 = "0.22.1"
chrono = { version = "0.4.38", features = ["serde"] }
dirs = "5.0.1"
dotenvy = "0.15.7"
futures = "0.3.30"
futures-util = { version = "0.3.30", features = ["sink"] }
lazy_static = "1.4.0"
listenfd = "1.0.1"
rand = "0.8.5"
reqwest = { version = "0.12.4", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.37.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["fs", "compression-full", "trace"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
urlencoding = "2.1.3"

[profile.dev.package.askama_derive]
opt-level = 3
