[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 3 
strip = true
codegen-units = 1 
lto = true

[[bin]]
name = "backend"
path = "src/main.rs"

[dependencies]
askama = { version = "0.13.1" }
axum = { version = "0.8.1", features = ["http2", "ws", "multipart", "macros", "form"] }
axum-extra = { version = "0.10.0", features = ["typed-header"] }
base64 = "0.22.1"
chrono = { version = "0.4.39", features = ["serde"] }
dirs = "6.0.0"
dotenvy = "0.15.7"
futures = "0.3.31"
futures-util = { version = "0.3.31", features = ["sink"] }
lazy_static = "1.5.0"
listenfd = "1.0.2"
rand = "0.9.0"
reqwest = { version = "0.12.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
tokio = { version = "1.43.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["fs", "compression-full", "trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
urlencoding = "2.1.3"

[profile.dev.package.askama_derive]
opt-level = 3
