[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["headers", "http2", "ws", "multipart", "macros"] }
base64 = "0.21.2"
chrono = { version = "0.4.26", features = ["serde"] }
dirs = "5.0.1"
dotenvy = "0.15.7"
futures = "0.3.28"
futures-util = { version = "0.3.28", features = ["sink"] }
rand = "0.8.5"
reqwest = { version = "0.11.19", features = ["json"] }
serde = { version = "1.0.185", features = ["derive"] }
serde_json = "1.0.105"
tokio = { version = "1.32.0", features = ["full"] }
urlencoding = "2.1.3"
