[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 3 
strip = true
codegen-units = 1 
lto = true

[dependencies]
axum = { version = "0.6.20", features = ["headers", "http2", "ws", "multipart", "macros"] }
base64 = "0.21.3"
chrono = { version = "0.4.28", features = ["serde"] }
dirs = "5.0.1"
dotenvy = "0.15.7"
futures = "0.3.28"
futures-util = { version = "0.3.28", features = ["sink"] }
rand = "0.8.5"
reqwest = { version = "0.11.20", features = ["json"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
tokio = { version = "1.32.0", features = ["full"] }
urlencoding = "2.1.3"
